--- a/ST_Transformers_and_finetuning_with_LLMs_A_Tensorflow.ipynb
+++ b/ST_Transformers_and_finetuning_with_LLMs_A_Tensorflow.ipynb
@@ -90,7 +90,7 @@
         "\n",
         "# Function to download the dataset\n",
         "def text_extractor(url = \"https://www.gutenberg.org/files/11/11-0.txt\"):\n",
-        "    # Request to fetch the tiny shakespeare dataset\n",
+        "    # Request to fetch the Alice dataset\n",
         "    response = requests.get(url)\n",
         "    # Checking if we got a valid response\n",
         "    if response.status_code == 200:\n",
